--- a/HappyCup/app/src/main/res/values/colors.xml
+++ b/HappyCup/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="mainColor">#85ADE6</color>
+    <color name="mainColor">#028472</color>
+    <color name="subColor">#CCE6E3</color>
     <color name="snow">#F4F4F4</color>
     <color name="silver">#CCCCCC</color>
     <color name="moon">#999999</color>
