로딩 이미지 수정 및 네비게이션 드로어 구현

--- a/HappyCup/app/src/main/res/drawable/animation_dialog.xml
+++ b/HappyCup/app/src/main/res/drawable/animation_dialog.xml
@@ -3,4 +3,5 @@
     <item android:drawable="@drawable/loading1" android:duration="250"/>
     <item android:drawable="@drawable/loading2" android:duration="250"/>
     <item android:drawable="@drawable/loading3" android:duration="250"/>
+    <item android:drawable="@drawable/loading4" android:duration="250"/>
 </animation-list>
