--- a/HappyCup/app/src/main/res/layout/dialog_loading.xml
+++ b/HappyCup/app/src/main/res/layout/dialog_loading.xml
@@ -24,13 +24,13 @@
         android:layout_height="72dp"
         android:src="@drawable/animation_dialog"
         />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:text="Loading..."
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:textSize="16dp" />
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center_vertical"-->
+<!--        android:text="Loading..."-->
+<!--        android:textStyle="bold"-->
+<!--        android:textColor="@android:color/white"-->
+<!--        android:textSize="16dp" />-->
 </LinearLayout>
 </layout>
