--- a/HappyCup/app/src/main/res/layout/activity_main.xml
+++ b/HappyCup/app/src/main/res/layout/activity_main.xml
@@ -46,9 +46,22 @@
             android:id="@+id/navigation"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
             app:headerLayout="@layout/nav_header"
-            app:menu="@menu/activity_main_menu"/>
+            style="@style/NavigationDrawerStyle"
+            android:layout_gravity="start"
+            app:menu="@menu/activity_main_menu">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:drawableStart="@drawable/setting"
+                android:layout_marginStart="20dp"
+                android:paddingStart="5dp"
+                android:gravity="center"
+                android:layout_marginBottom="20dp"
+                android:text="환경설정"/>
+        </com.google.android.material.navigation.NavigationView>
 
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
