--- a/HappyCup/app/src/main/res/menu/activity_main_menu.xml
+++ b/HappyCup/app/src/main/res/menu/activity_main_menu.xml
@@ -7,6 +7,13 @@
         android:id="@+id/myPageFragment"
         android:title="마이페이지" />
     <item
-        android:id="@+id/optionFragment"
-        android:title="설정" />
+        android:title="분리수거 설명" />
+    <item
+        android:title="사용설명서" />
+    <item
+        android:title="공지사항" />
+    <item
+        android:title="의견 보내기" />
+    <item
+        android:title="고객센터" />
 </menu>
