--- a/HappyCup/app/src/main/res/layout/holder_my_page.xml
+++ b/HappyCup/app/src/main/res/layout/holder_my_page.xml
@@ -13,13 +13,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/white"
-            android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/txtOption"
                 android:layout_width="match_parent"
@@ -28,12 +21,11 @@
                 android:paddingLeft="15dp"
                 android:paddingTop="10dp"
                 android:paddingRight="7dp"
+                android:paddingStart="5dp"
                 android:paddingBottom="7dp"
                 android:text="@{list, default = 개발자용}"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
         </LinearLayout>
-
-    </LinearLayout>
 
 </layout>
