--- a/HappyCup/app/src/main/res/drawable/bar_view.xml
+++ b/HappyCup/app/src/main/res/drawable/bar_view.xml
@@ -11,7 +11,7 @@
                 android:width="1dp"
                 android:color="#028472" />
 
-            <solid android:color="#ffffff" />
+            <solid android:color="#028472" />
 
             <corners
                 android:radius="5dp"
