--- a/HappyCup/app/src/main/res/layout/activity_main.xml
+++ b/HappyCup/app/src/main/res/layout/activity_main.xml
@@ -55,13 +55,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:drawableStart="@drawable/setting"
                 android:layout_marginStart="20dp"
-                android:paddingStart="5dp"
-                android:textSize="18sp"
-                android:gravity="center"
                 android:layout_marginBottom="20dp"
-                android:text="환경설정"/>
+                android:drawableStart="@drawable/setting"
+                android:gravity="center"
+                android:paddingStart="5dp"
+                android:textSize="18sp" />
         </com.google.android.material.navigation.NavigationView>
 
     </androidx.drawerlayout.widget.DrawerLayout>
