--- a/HappyCup/app/src/main/res/layout/fragment_mypage.xml
+++ b/HappyCup/app/src/main/res/layout/fragment_mypage.xml
@@ -114,11 +114,11 @@
                     android:id="@+id/button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="21dp"
                     android:layout_marginEnd="16dp"
+                    android:background="@color/white"
                     android:text="상점\n바로가기"
                     android:textColor="@android:color/black"
-                    android:background="@color/white"
+                    app:layout_constraintBottom_toTopOf="@+id/cstLyGuide"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
