--- a/HappyCup/app/src/main/res/layout/holder_my_page.xml
+++ b/HappyCup/app/src/main/res/layout/holder_my_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -8,24 +9,37 @@
             type="String" />
     </data>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
-            <TextView
-                android:id="@+id/txtOption"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:paddingLeft="15dp"
-                android:paddingTop="10dp"
-                android:paddingRight="7dp"
-                android:paddingStart="5dp"
-                android:paddingBottom="7dp"
-                android:text="@{list, default = 개발자용}"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-        </LinearLayout>
+ <androidx.constraintlayout.widget.ConstraintLayout
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content">
 
+     <androidx.constraintlayout.widget.Guideline
+         android:id="@+id/cstLyGuide"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:orientation="vertical"
+         app:layout_constraintGuide_percent="0.05"/>
+
+     <TextView
+         android:id="@+id/txtOption"
+         android:layout_width="0dp"
+         android:layout_height="wrap_content"
+         android:foreground="?android:attr/selectableItemBackground"
+         android:padding="9dp"
+         android:text="@{list, default = 개발자용}"
+         android:textColor="@color/black"
+         android:textSize="20sp"
+         app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintStart_toEndOf="@id/cstLyGuide"
+         app:layout_constraintTop_toTopOf="parent" />
+
+     <ImageView
+         android:layout_width="0dp"
+         android:layout_height="wrap_content"
+         android:background="@drawable/line"
+         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/cstLyGuide"
+         app:layout_constraintTop_toBottomOf="@+id/txtOption" />
+
+ </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
