--- a/HappyCup/app/src/main/res/values/themes.xml
+++ b/HappyCup/app/src/main/res/values/themes.xml
@@ -14,6 +14,10 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_loading</item>
+    </style>
+
     <!-- dropDownListViewStyle 추가 -->
     <style name="NavigationDrawerStyle">
 
