--- a/HappyCup/app/src/main/res/layout/nav_header.xml
+++ b/HappyCup/app/src/main/res/layout/nav_header.xml
@@ -119,20 +119,19 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/imageView13"
         app:layout_constraintStart_toEndOf="@id/imageView16"
-        app:layout_constraintTop_toTopOf="@id/imageView13"
-        app:layout_constraintVertical_bias="0.642" />
+        app:layout_constraintTop_toTopOf="@id/imageView13" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="11dp"
         android:text="환전"
         android:textColor="@android:color/black"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/imageView13"
-        app:layout_constraintStart_toEndOf="@id/imageView17"
+        app:layout_constraintStart_toEndOf="@+id/imageView17"
         app:layout_constraintTop_toTopOf="@+id/imageView13" />
 
     <ImageView
@@ -147,20 +146,19 @@
 
     <ImageView
         android:id="@+id/imageView17"
-        android:layout_width="wrap_content"
+        android:layout_width="22dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/imageView13"
         app:layout_constraintStart_toEndOf="@id/guideline2"
         app:layout_constraintTop_toTopOf="@+id/imageView13"
-        app:srcCompat="@drawable/icon_dongjun" />
+        app:srcCompat="@drawable/coin" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.35"/>
+        app:layout_constraintGuide_begin="144dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
