--- a/HappyCup/app/src/main/res/menu/activity_main_menu.xml
+++ b/HappyCup/app/src/main/res/menu/activity_main_menu.xml
@@ -6,12 +6,12 @@
     <item
         android:title="분리수거 설명" />
     <item
-        android:title="사용설명서" />
-    <item
         android:title="에코 뉴스" />
+    <item
+        android:title="사용설명서" />
     <item
         android:title="고객센터" />
     <item
         android:id="@+id/AIFragment"
-        android:title="AI 모델(AI 모델 적용 후 삭제 예정)"/>
+        android:title="AI 모델(앱 완성 후 삭제 예정)"/>
 </menu>
