--- a/HappyCup/app/src/main/res/layout/holder_my_page.xml
+++ b/HappyCup/app/src/main/res/layout/holder_my_page.xml
@@ -13,13 +13,6 @@
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
 
-     <androidx.constraintlayout.widget.Guideline
-         android:id="@+id/cstLyGuide"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:orientation="vertical"
-         app:layout_constraintGuide_percent="0.05"/>
-
      <TextView
          android:id="@+id/txtOption"
          android:layout_width="0dp"
@@ -30,7 +23,7 @@
          android:textColor="@color/black"
          android:textSize="20sp"
          app:layout_constraintBottom_toBottomOf="parent"
-         app:layout_constraintStart_toEndOf="@id/cstLyGuide"
+         app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
 
      <ImageView
@@ -38,7 +31,7 @@
          android:layout_height="wrap_content"
          android:background="@drawable/line"
          app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cstLyGuide"
+         app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/txtOption" />
 
  </androidx.constraintlayout.widget.ConstraintLayout>
