--- a/HappyCup/app/src/main/res/values/colors.xml
+++ b/HappyCup/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="mainColor">#028472</color>
     <color name="subColor">#CCE6E3</color>
+    <color name="subColor1">#80C1B8</color>
     <color name="snow">#F4F4F4</color>
     <color name="silver">#CCCCCC</color>
     <color name="moon">#999999</color>
