--- a/HappyCup/app/src/main/res/values/themes.xml
+++ b/HappyCup/app/src/main/res/values/themes.xml
@@ -18,6 +18,10 @@
         <item name="android:windowBackground">@drawable/splash_loading</item>
     </style>
 
+    <style name="BaseTextStyle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
     <!-- dropDownListViewStyle 추가 -->
     <style name="NavigationDrawerStyle">
         <item name="android:textSize">20sp</item><!-- text size in menu-->
