--- a/HappyCup/app/src/main/res/layout/dialog_fail.xml
+++ b/HappyCup/app/src/main/res/layout/dialog_fail.xml
@@ -7,8 +7,7 @@
             <ImageView
                 android:id="@+id/imageView18"
                 android:layout_width="200dp"
-                android:layout_height="400dp"
-                android:src="@drawable/fail"/>
+                android:layout_height="400dp" />
     </FrameLayout>
 
 
